Bug 458332 - Gwenview doesn't stop at last image
Summary: Gwenview doesn't stop at last image
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-26 08:39 UTC by thomas krause
Modified: 2024-10-16 10:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description thomas krause 2022-08-26 08:39:58 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Use left or Left/Right Cursor in Overview (? german here as  Übersicht), it doesn't stop at beginning/end
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


Betriebssystem: openSUSE Leap 15.4
KDE-Plasma-Version: 5.24.4
KDE-Frameworks-Version: 5.90.0
Qt-Version: 5.15.2
Kernel-Version: 5.14.21-150400.24.18-default (64-bit)
Grafik-Plattform: X11
Prozessoren: 12 × AMD Ryzen 5 2600 Six-Core Processor
Speicher: 15,5 GiB Arbeitsspeicher
Grafikprozessor: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2

ADDITIONAL INFORMATION

Gwenview as a fast viewer for files in a path became useless, because he doesn't stop at the end like did before.
If you wanted this terrible feature it was always possible to jump to the beginning or end. Now the program got useless, so I had to take another with more overhead (for ex. geeqie), a bad thing because gwenview was light and fast, good for getting an overview, now overview seems impossible, because using the cursor it doesn't stop at beginning or end of the files.
Comment 1 Paul 2022-09-28 11:01:35 UTC
I'm also finding this new behaviour rather irritating.

There is the option in (Gwenview's) settings for "Notify after reaching the last image" if that is enabled then the former behaviour is *almost* restored, albeit it then needs confirmation the user wishes to stay on the last image.

Would it be possible to introduce another setting along the lines of "Stop at last image", which when set would stop at the last image irrespective of the setting of "Notify after reaching the last image", so one could have no notification and just stop at last image.
Comment 2 Bug Janitor Service 2024-09-01 20:09:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/286
Comment 3 Felix Ernst 2024-10-16 10:14:02 UTC
Git commit 11737317f48352eb26b2372e9a9cf39062708c30 by Felix Ernst, on behalf of Christian Svensson.
Committed on 16/10/2024 at 10:02.
Pushed by felixernst into branch 'master'.

Make it optional to start over after last image

Add checkbox on the general configuration page to make it optional to
start over after the first or last image. If the start over option is
disabled, disable the previous and next buttons when the first and last
images are reached, respectively.

Do not change the default behavior.

M  +47   -17   app/generalconfigpage.ui
M  +10   -4    app/mainwindow.cpp
M  +4    -0    lib/gwenviewconfig.kcfg

https://invent.kde.org/graphics/gwenview/-/commit/11737317f48352eb26b2372e9a9cf39062708c30