Make it optional to start over after last image

Add checkbox on the general configuration page to make it optional to
start over after the first or last image. If the start over option is
disabled, disable the previous and next buttons when the first and last
images are reached, respectively.

Do not change the default behavior.

BUG: 458332